--- a/login.html
+++ b/login.html
@@ -13,8 +13,11 @@
 <body>
 
     <main>
-        <div>
-
+        <div id="input-fields">
+            <h1>Welcome to my Portfolio!</h1>
+            <input>
+            <input>
+            <button>Login</button>
         </div>
     </main>
 
