made changes to sign in

--- a/login.html
+++ b/login.html
@@ -14,10 +14,10 @@
 
     <main>
         <div id="input-fields">
-            <h1>Welcome to my Portfolio!</h1>
+            <h1>Sign In</h1>
             <input>
             <input>
-            <button>Login</button>
+            <button>Sign In</button>
         </div>
     </main>
 
